[package]
name = "fixg"
version = "0.1.0"
edition = "2021"
description = "fixg: A high-performance, async FIX engine and client library in Rust"
license = "Apache-2.0 OR MIT"
repository = "https://example.com/fixg"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
bytes = "1.10"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
memchr = "2.7"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }